# FlightSpace

./: .gitignore  README.md
.github/workflows/: codeql.yml
backend/: Cargo.toml  questions.json
backend/src/: main.rs  players.rs  questions.rs
frontend/: 4launchpad.css  data.js  flight_info.html  game.html  game1.html  game_testing.html  index.html  language.html  script.js  test.html  test2.html  testing.html  time.js
frontend/Tests/: game_testing.html  index.html  test.html
frontend/css/: 4launchpad.css  style.css
frontend/error/: error.html
frontend/fonts/: readme
frontend/homescreen/: eng.css  eng.html  temp.html
frontend/homescreen/apps/: montor.css  montor.html
frontend/js/: actually.js  answer.js  bg.js  data.js  game_script.js  game_script_host.js  game_script_player.js  game_testing.js  newuser.js  question.js  script.js  script2.js  squircle.js
frontend/lang/: index.html  uwu.html
