[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
home = "0.5.5"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"]}
